package com.example.entity;

public enum WeeklySummaryDeliveryStatus {
    DASHBOARD_ONLY,
    EMAIL_PENDING,
    SENT
}
