package com.example.entity;

public enum WeeklySummaryType {
    SUMMARY,
    MOTIVATION,
    AI_REFLECTION
    }
